# pydantic-stack-core

./: README.md  pyproject.toml
pydantic_stack_core/: __init__.py
